influxdb3-plugin-cli/tests/snapshots/validate_smoke__validate_async_trigger_json.snap
---
source: influxdb3-plugin-cli/tests/validate_smoke.rs
expression: payload
---
{
  "diagnostics": [
    {
      "field": "__init__.py",
      "message": "trigger ProcessWrites is implemented as `async def` in __init__.py; the runtime invokes trigger functions synchronously",
      "variant": "AsyncTriggerFn"
    }
  ]
}
