influxdb3-plugin-cli/tests/snapshots/validate_smoke__validate_happy_path_json.snap
---
source: influxdb3-plugin-cli/tests/validate_smoke.rs
expression: payload
---
{
  "result": {},
  "status": "ok"
}
