influxdb3-plugin-cli/tests/snapshots/validate_smoke__validate_no_entry_point_json.snap
---
source: influxdb3-plugin-cli/tests/validate_smoke.rs
assertion_line: 510
expression: payload
---
{
  "error": {
    "code": "validate::failed",
    "diagnostics": [
      {
        "code": "validate::no_entry_point",
        "message": "no Python entry point found in the plugin directory (no .py files at the top level)"
      }
    ],
    "message": "1 validation diagnostic(s)"
  },
  "status": "error"
}
