influxdb3-plugin-cli/tests/snapshots/validate_smoke__validate_valid_single_file_plugin_json.snap
---
source: influxdb3-plugin-cli/tests/validate_smoke.rs
assertion_line: 492
expression: payload
---
{
  "result": {},
  "status": "ok"
}
